fix file icons in explorer are not aligned if file name is truncated

--- a/packages/filesystem/src/browser/style/file-icons.css
+++ b/packages/filesystem/src/browser/style/file-icons.css
@@ -28,7 +28,7 @@
 }
 
 .theia-file-icons-js.file-icon {
-    width: var(--theia-icon-size);
+    min-width: var(--theia-icon-size);
     height: var(--theia-icon-size);
     display: flex;
     justify-content: center;
